<?xml version="1.0"?>
<package format="2">
    <name>catkin_setup</name>
    <version>0.0.0</version>
    <description>Dummy package to make it easy to setup the workspace and generate the setup.[sh|bash|zsh] scripts in CI.</description>

    <author email="victorr@ethz.ch">Victor Reijgwart</author>
    <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
