<?xml version="1.0"?>
<package format="2">
  <name>wavemap_examples</name>
  <version>1.6.3</version>
  <description>Usages examples for wavemap.</description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>
  <license>BSD</license>
  <url>https://github.com/ethz-asl/wavemap</url>

  <author email="victorr@ethz.ch">Victor Reijgwart</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>wavemap</depend>
  <depend>wavemap_msgs</depend>
  <depend>wavemap_ros_conversions</depend>
</package>
