<package format="3">
  <name>wavemap_ros</name>
  <version>0.3.0</version>
  <description>wavemap ROS Wrappers</description>
  <maintainer email="divelix1@gmail.com">divelix</maintainer>
  <license>MIT</license>

  <!-- Common ROS 1 / ROS 2 dependencies -->
  <build_depend>ros_environment</build_depend>

  <!-- ROS 1 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>

  <!-- ROS 2 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rcutils</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>
  <exec_depend condition="$ROS_VERSION == 2">ros2launch</exec_depend>

  <!-- ROS1/2 dependencies -->
  <depend>std_msgs</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
