<?xml version="1.0"?>
<package format="2">
    <name>wavemap_2d_ground_truth</name>
    <version>1.0.0</version>
    <description>Generate ground truth occupancy maps</description>

    <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>

    <author>Victor Reijgwart</author>

    <license>ASL 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>pcl_conversions</depend>
    <depend>wavemap_2d</depend>

</package>
