<?xml version="1.0"?>
<package format="2">
    <name>wavemap_2d_ground_truth</name>
    <version>0.0.0</version>
    <description>Generate ground truth occupancy maps</description>

    <author email="victorr@ethz.ch">Victor Reijgwart</author>
    <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>pcl_conversions</depend>
    <depend>wavemap_2d</depend>

</package>
