<?xml version="1.0"?>
<package format="2">
    <name>wavemap_2d_ground_truth</name>
    <version>0.0.0</version>
    <description>Generate ground truth occupancy maps</description>

    <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>
    <license>BSD</license>
    <url>https://github.com/victorreijgwart/wavemap_2d</url>

    <author email="victorr@ethz.ch">Victor Reijgwart</author>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>pcl_conversions</depend>
    <depend>gazebo</depend>
    <depend>gazebo_ros</depend>
    <depend>wavemap_2d</depend>
    <depend>wavemap_2d_msgs</depend>

</package>
